--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Super projet p5 !</title>
     </head>
     <body>
-        <script type="text/javascript" charset="UTF-8" src="p5.js"></script>
+        <script type="text/javascript" charset="UTF-8" src="libraries/p5.js"></script>
         <script type="text/javascript" charset="UTF-8" src="sketch.js"></script>
     </body>
 
