Finished Buttons Implementation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <title>Super projet p5 !</title>
     </head>
     <body>
+        <select id = "selEquation">
+            <option value="2 * cos(6 * theta)">2 cos(6a)</option>
+            <option value="2 * cos(2 * theta)">2 cos(2a)</option>
+            <option value="5 * theta">5a</option>
+        </select>
+        <button id="startButton" onclick="clickOnDrawButton();">Draw / Erase the shape</button>
+
         <script type="text/javascript" charset="UTF-8" src="libraries/p5.js"></script>
         <script type="text/javascript" charset="UTF-8" src="sketch.js"></script>
     </body>
