Change the page title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Super projet p5 !</title>
+        <title>Polar Shapes</title>
     </head>
     <body>
         <select id = "selEquation">
